
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int * HWND ;


 scalar_t__ FALSE ;
 int Sleep (int) ;
 int VK_MENU ;
 int VK_SHIFT ;
 int VK_TAB ;
 int _sim_key_down (int ) ;
 int _sim_key_up (int ) ;

int _sim_alt_shift_tab(int nCount)
{
 int i = 0;
 HWND hWnd = ((void*)0);


 int nFinalRet = -1;

 do
 {
  _sim_key_down(VK_MENU);
  _sim_key_down(VK_SHIFT);


  for (i = 0; i < nCount; i++)
  {
   _sim_key_down(VK_TAB);
   _sim_key_up(VK_TAB);

   Sleep(1000);

  }


  _sim_key_up(VK_MENU);
  _sim_key_up(VK_SHIFT);
 } while (FALSE);

 return nFinalRet;
}
