; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_41015.c__sim_alt_shift_tab.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_41015.c__sim_alt_shift_tab.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VK_MENU = common dso_local global i32 0, align 4
@VK_SHIFT = common dso_local global i32 0, align 4
@VK_TAB = common dso_local global i32 0, align 4
@FALSE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_sim_alt_shift_tab(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  store i32* null, i32** %4, align 8
  store i32 -1, i32* %5, align 4
  br label %6

6:                                                ; preds = %29, %1
  %7 = load i32, i32* @VK_MENU, align 4
  %8 = call i32 @_sim_key_down(i32 %7)
  %9 = load i32, i32* @VK_SHIFT, align 4
  %10 = call i32 @_sim_key_down(i32 %9)
  store i32 0, i32* %3, align 4
  br label %11

11:                                               ; preds = %21, %6
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* %2, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %24

15:                                               ; preds = %11
  %16 = load i32, i32* @VK_TAB, align 4
  %17 = call i32 @_sim_key_down(i32 %16)
  %18 = load i32, i32* @VK_TAB, align 4
  %19 = call i32 @_sim_key_up(i32 %18)
  %20 = call i32 @Sleep(i32 1000)
  br label %21

21:                                               ; preds = %15
  %22 = load i32, i32* %3, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %3, align 4
  br label %11

24:                                               ; preds = %11
  %25 = load i32, i32* @VK_MENU, align 4
  %26 = call i32 @_sim_key_up(i32 %25)
  %27 = load i32, i32* @VK_SHIFT, align 4
  %28 = call i32 @_sim_key_up(i32 %27)
  br label %29

29:                                               ; preds = %24
  %30 = load i64, i64* @FALSE, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %6, label %32

32:                                               ; preds = %29
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i32 @_sim_key_down(i32) #1

declare dso_local i32 @_sim_key_up(i32) #1

declare dso_local i32 @Sleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
